@@ -1,0 +1,6 @@
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<configuration>
+  <components>
+    <component type="CastleTests.Components.A" scopeAccessorType="LifetimeScopeAccessor" />
+  </components>
+</configuration>
